# inland-biosfera

./: .gitignore  .~lock.alloc.csv#  .~lock.teste_alloc.ods#  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  README1st.txt  READMEabrahao  alloc.csv  configure  configure.ac  doSoil.sh  inland-biosfera.sublime-workspace  input  testlog1  testlog2
autom4te.cache/: output.0  requests  traces.0
contrib/: Makefile.am  Makefile.in  compare_0D-apr2012.ncl  compare_0D-oct2010.ncl  convert_0d.jnl  genmake-avenger.sh  get_surta.ncl  graphs_0D-apr2012.ncl  inland-compare-functions.sh  inland-compare-plot1D.py  inland-compare-plot2D.py  inland-compare.sh  inland-compare_inland_compar.h  inland-maketiles.sh  inland-retile.py  inland_write_hrmap.F90  merge_monfreda.sh  open_0d.jnl  submit-inland.pbs  toggleprecision.sh
contrib/optis-2.3/: AUTHORS  Makefile.am  Makefile.in  Notice  README  config.h.in  configure  configure.ac  runoptis.sh
contrib/optis-2.3/data/input/: conf.h  struct.sh
contrib/optis-2.3/src/: Makefile.am  Makefile.in  optis_calcdistorigin.c  optis_evalind.c  optis_evalpop.c  optis_global.h  optis_main.c  optis_mindistorigin.c  optis_rdfilewdouble.c  optis_rdinlandout.c  optis_runinland.c  optis_stparams.c  optis_tempdir.c  optis_wrtinlandparams.c
contrib/optis-2.3/src/aux/: optis_addobjfromlvl.c  optis_addvariavel.c  optis_ckconstraints.c  optis_ckparamconstraint.c  optis_initallcalibrationlvl.c  optis_initbaseparam.c  optis_initcalibrationlvl.c  optis_initmodelo.c  optis_initnsga.c  optis_initparamsrange.c  optis_initsitarray.c  optis_rdcalibrationvars.c  optis_rddouble.c  optis_rdfilewint.c  optis_rdint.c  optis_rdstring.c  optis_setparamsrange.c  optis_strcmpe.c
contrib/optis-2.3/src/evolut_algorithm/: optis_assrankcrowd.c  optis_cpyind.c  optis_crossover.c  optis_crowddist.c  optis_crowddistind.c  optis_crowddistlist.c  optis_crowdingfill.c  optis_dominance.c  optis_fillnds.c  optis_initpop.c  optis_listdel.c  optis_listinsert.c  optis_merge.c  optis_mutation.c  optis_nsga.c  optis_rand.c  optis_selection.c  optis_sortdist.c  optis_sortobj.c  optis_tournament.c
contrib/optis-2.3/src/mem/: optis_addconstraint.c  optis_allocallobj.c  optis_allocbaseparam.c  optis_allocconstraint.c  optis_allocind.c  optis_allocmodelo.c  optis_allocnsgaparam.c  optis_allocparamsrange.c  optis_allocpop.c  optis_allocsitarray.c  optis_allocsitio.c  optis_deallocallcalibrationlvl.c  optis_deallocate2d.c  optis_deallocbaseparam.c  optis_dealloccalibrationlvl.c  optis_deallocconstraint.c  optis_deallocind.c  optis_deallocmodelo.c  optis_deallocnsgaparam.c  optis_deallocparamsrange.c  optis_deallocpop.c  optis_deallocsitarray.c  optis_deallocsitio.c
contrib/optis-2.3/src/obj_func_metds/: optis_mae.c  optis_rmse.c
contrib/optis-2.3/src/report/: optis_openallpopf.c  optis_openbestindf.c  optis_opencalibparamsf.c  optis_rptallobj.c  optis_rptbestind.c  optis_rptcalibparams.c  optis_rptind.c  optis_rptinlandparams.c  optis_rptparamsrange.c  optis_rptparetofront.c  optis_rptpop.c
contrib/soil_interpolate/: soil_interpolate_v0.1.ncl
contrib/sparse_extract/: README  backup_sparse_extract_clim_v0.1.ncl  points.list  run_sparse_extract_clim.sh  run_sparse_extract_daily.sh  run_sparse_extract_yearly.sh  sparse_extract_clim_v0.1.ncl  sparse_extract_clim_v0.2.ncl  sparse_extract_daily_v0.2.ncl  sparse_extract_yearly_v0.2.ncl
contrib/testing/: README.md  points.list  test_compare_crop_nosparse_v1.ncl  test_compare_crop_v1.ncl  test_compare_input_pdate_nosparse_v1.ncl  test_compare_input_prec_v1.ncl  test_compare_monthly_nosparse_v1.ncl
contrib/testing/ref_output/: biomass-daily-2005.nc  biomass-daily-2006.nc  crop-yearly-2005.nc  crop-yearly-2006.nc  inland-daily-2005.nc  inland-daily-2006.nc  inland-monthly-2005.nc  inland-monthly-2006.nc  inland-monthly-pft-2005.nc  inland-monthly-pft-2006.nc  inland-restart-2005_12.nc  inland-restart-2006_12.nc  inland-yearly-2005.nc  inland-yearly-2006.nc  inland-yearly-pft-2005.nc  inland-yearly-pft-2006.nc
docs/: INSTALL.grid  INSTALL.single_point  README.advanced  README.cray  README.grid  README.single_point  guiarapido.txt  guiarapido_agro.txt  parameters_single_point.txt  quickguide.txt  quickguide_agro.txt
include/: inland_comage.h  inland_compar.h  inland_comsat.h  inland_comtex.h  inland_config.h.in
input/: clay.nc  cld.mon.nc  co2.data.txt  daily  deltat.mon.nc  deltat.nc  frostd.mon.nc  poi.nc  prec.mon.nc  rh.mon.nc  sand.nc  soita.clay.nc  soita.nc  soita.sand.nc  surta.nc  temp.mon.nc  teste.nc  tmax.mon.nc  tmin.mon.nc  topo.nc  topo.ver.nc  trange.mon.nc  vapp.mon.nc  vegtype.nc  vegtype2.nc  wetd.mon.nc  wspd.mon.nc
input/crop_params/: plantdoy.2005.nc  planting.doy.2005.nc
input/crop_params/working/: agritempo_inicio_plantio_v5.nc  plantdoy.2005.nc  planting.doy.2005.nc
input/old_soil_11L/: soita.clay.nc
input/old_soil_6L/: soita.clay.nc  soita.sand.nc
m4/: ac_fc_check_bounds.m4  ax_f90_module_extension.m4
output/: crop-yearly-2005.nc  crop-yearly-2006.nc  inland-monthly-2005.nc  inland-monthly-2006.nc  inland-monthly-pft-2005.nc  inland-monthly-pft-2006.nc  inland-restart-2005_12.nc  inland-restart-2006_12.nc  inland-yearly-2005.nc  inland-yearly-2006.nc  inland-yearly-pft-2005.nc  inland-yearly-pft-2006.nc
src/: .jp..html.swp  Makefile.am  Makefile.in  inland_alloc.F90  inland_arr2vec.F90  inland_arr3arr2.F90  inland_build_file.F90  inland_canini.F90  inland_canopy.F90  inland_cascad2.F90  inland_cascade.F90  inland_cellarea.F90  inland_cellbox.F90  inland_check.F90  inland_climanl.F90  inland_climanl2.F90  inland_co2.F90  inland_coldstart.F90  inland_com1d.F90  inland_comatm.F90  inland_combcs.F90  inland_combgc.F90  inland_comcrop.F90  inland_comdiag.F90  inland_comfire.F90  inland_comforc.F90  inland_comhour.F90  inland_comhyd.F90  inland_comlsmh.F90  inland_commenthandler.F90  inland_comnitr.F90  inland_compft.F90  inland_comsatp.F90  inland_comsno.F90  inland_comsoi.F90  inland_comsum.F90  inland_comtex.F90  inland_comveg.F90  inland_comwork.F90  inland_const.F90  (+124 more)
(+27 files in other folders)
